# hyperbot

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  CLAUDE.md  CLOUD_READY_SUMMARY.md  Claude.md  DOCKER_DEPLOYMENT.md  Dockerfile  GITHUB_ACTIONS_QUICKSTART.md  NAMING_CONVENTION.md  README.md  README.uv.md  SETUP_TEST_POSITIONS.md  deploy-gcp-cloudrun.sh  docker-compose.yml  hyperbot.service  install-service.sh  manage-bot.sh  mypy-output.txt  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  setup-github-actions.sh  test_scale_wizard.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: ux-component-library.md
.github/workflows/: deploy-gcp.yml  manage-gcp-bot.yml
docs/: ARCHITECTURE.md  COMPONENT_IMPLEMENTATION_GUIDE.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  ENV_QUICK_REFERENCE.md  GCP_BOT_MANAGEMENT.md  GCP_NAMING_CONVENTION.md  GCP_SECRETS_LOGGING.md  GITHUB_ACTIONS_QUICKSTART.md  GITHUB_ACTIONS_SETUP.md  NAMING_CONVENTION.md  PHASE_7_PLAN.md  PLAN.md  TELEGRAM_UX_COMPONENT_LIBRARY.md  TODO.md  UX_DESIGN_SPECIFICATIONS.md  VERSION_MANAGEMENT.md  linting.md  preliminary-plan.md  refactor-report.md  telegram-ux-implementation-playbook.md  telegram-ux-system-guide.md  user-feedback.md
docs/archive/2025-12-07-ux/: TELEGRAM_UX_COMPONENT_LIBRARY.md  UX_IMPROVEMENT_OPPORTUNITIES.md  ux-component-library.md
docs/development/: REBALANCING_TEST_RESULTS.md  SUCCESSFUL_REBALANCE_TEST.md  TEST_MIGRATION_SESSION_SUMMARY.md  TEST_REFACTORING_SUMMARY.md
docs/hyperliquid/: api-reference.md  python-sdk.md
docs/research/: hyperliquid-liquidation-mechanics.md  hyperliquid_fills_api.md  risk-indicators-industry-research.md
docs/telegram/: best-practices.md  bot-api-reference.md  faq.md  features.md
scripts/: README.md  check-dead-code.sh  check_api_data.py  check_order_signature.py  debug_account_balance.py  debug_position_structure.py  deploy-gcp-cloudrun.sh  discover_api_methods.py  inspect_exchange_methods.py  lint-fix.sh  lint.sh  manage-gcp-bot.sh  manual_test_rebalancing.py  open_test_positions.py  run_all_api_tests.sh  setup-gcp-secrets.sh  setup_test_positions.py  switch-env.sh  test-docker-local.sh  test_error_handling.py  test_hyperliquid.py  test_leverage_rebalance.py  test_market_data.py  test_order_monitor_recovery.py  test_order_monitor_service.py  test_order_operations.py  test_portfolio_use_cases.py  test_rebalancing.py  test_scale_order_use_cases.py  test_user_fills_api.py  test_websocket_connection.py  test_websocket_direct.py  test_websocket_threading.py  update-version.sh  verify-env.sh
src/: index.ts
src/api/: main.py
src/api/models/: __init__.py  responses.py
src/api/routes/: __init__.py  account.py  leverage.py  market_data.py  orders.py  positions.py  rebalance.py  scale_orders.py  web.py
src/api/templates/: base.html  dashboard.html  positions.html  rebalance.html
src/bot/: main.py  menus.py  middleware.py  utils.py
src/bot/components/: __init__.py  buttons.py  cards.py  formatters.py  lists.py  loading.py  preview.py  preview_builder.py  risk.py  state_extractor.py
src/bot/formatters/: __init__.py  account.py  progress_bar.py
src/bot/handlers/: __init__.py  advanced.py  basic.py  commands.py  menus.py  notify.py  orders.py  (+7 more)
src/config/: __init__.py  logger.py  secrets.py  settings.py
src/models/: notification_state.py  order_fill_event.py  scale_order.py
src/services/: __init__.py  account_service.py  hyperliquid_service.py  leverage_service.py  market_data_service.py  order_monitor_service.py  order_service.py  position_service.py  rebalance_service.py  risk_calculator.py  scale_order_service.py
src/use_cases/: __init__.py  base.py
tests/: conftest.py
tests/bot/: test_account_formatter.py  test_advanced.py  test_basic.py  test_close_command.py  test_commands_and_menus.py  test_menus.py  test_middleware.py  test_rebalancing.py  test_trading.py  test_utils.py  test_wizards.py
tests/helpers/: QUICK_REFERENCE.md  __init__.py  assertions.py  mock_data.py  patching.py  service_mocks.py  telegram_mocks.py
tests/models/: test_notification_state.py  test_order_fill_event.py
tests/services/: test_account_service.py  test_hyperliquid_service.py  test_leverage_service.py  test_market_data_service.py  test_order_service.py  test_position_service.py  test_rebalance_service.py  test_risk_calculator.py  test_scale_order_service.py
tests/use_cases/: __init__.py
(+52 files in other folders)
