[project]
name = "hyperbot"
version = "0.1.0"
description = "Trading bot for Hyperliquid with Telegram integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.2",
    "uvicorn[standard]>=0.38.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.3",
    "loguru>=0.7.3",
    "hyperliquid-python-sdk>=0.20.0",
    "httpx>=0.28.1",
    "aiohttp>=3.13.2",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "mypy>=1.18.2",
    "black>=25.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
